# lakepipe

./: .env.example  .gitignore  README.md  lakepipe.config.json  lakepipe.config.yaml  lakepipe.md  pyproject.toml  test_basic.py  test_engines.py  test_windows.py  update_cli.py  update_config_example.py  update_version.py
.agent/: STYLE_GUIDE.md  prefered_pythonpackages.md
.claude/commands/: explore_refine_plan_implement.md
examples/: README.md
examples/batch/: market_data_etl.py  minute_bars_polars.py  portfolio_analytics.py  technical_indicators.py
examples/configs/: .env.example  batch_config.yaml  streaming_config.yaml
examples/streaming/: market_data_enrichment.py  real_time_vwap.py  risk_monitoring.py  tick_data_kafka_streaming.py
lakepipe/: __init__.py
lakepipe/api/: pipeline.py
lakepipe/cli/: main.py
lakepipe/config/: defaults.py  loaders.py  types.py
lakepipe/core/: logging.py  processors.py  results.py  streams.py  window.py
lakepipe/transforms/: __init__.py  arrow_processor.py  duckdb_processor.py  polars_processor.py  user_processor.py
